# stock-data-project

./: .gitignore  README.md  _audit_check.py  _audit_code.py  data_quality_report.json  main_v2_production.py  pyproject.toml  requirements.txt  run_backtest.py  run_tests.py  test_output.txt
_temp/: VERIFICATION_REPORT.md  all_git.txt  api_both.txt  api_result2.txt  baostock_test.py  bat_result.txt  call_api.py  call_api2.py  call_api3.py  call_api4.py  check_adj_schema.py  check_after.py  check_cal_2026.py  check_consistency.py  check_delist_state.py  check_drop.py  check_git.py  check_git2.py  check_idx_cols.py  check_idx_data.py  check_last2.py  check_lock.py  check_ohlc_gap.py  check_ok.py  check_ok.txt  check_pit.py  check_pk.py  check_raw_schema.py  check_schema.py  check_step0c.py  check_tables.py  check_trade_days.py  cleanup_and_run.py  closure_final_result.txt  closure_result.txt  closure_verification.py  closure_vr.txt  commit_diff.txt  commit_msg.txt  complete_result.txt  (+257 more)
data/: config.toml  config.toml.example  data_scope.yaml
docs/: ARCHITECTURE_CONSOLIDATION.md  CODE_REVIEW.md  CODE_REVIEW_2026_04_07.md  DEEP_OPTIMIZATION_REPORT.md  DEVLOG.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT_V2.md  OPTIMIZATION_V3_REPORT.md  PATCH_NOTES.md  PHASE5_VERIFICATION_PLAN.md  PHASE5_VERIFY_PLAN.md  PRODUCTION_DB_SCHEMA.md  PROJECT_OVERVIEW.md  README.md  REFACTOR_REPORT.md  REFACTOR_REPORT_V2.md  VALIDATION_TASKS.md  VULNERABILITY_REPORT.md  v2.0_refactor_plan.md
scripts/: __init__.py  advanced_checkpoint.py  auto_repair.py  backoff_controller.py  backtest_engine_v3.py  backtest_validator.py  baostock_enhanced.py  checkpoint_manager.py  data_classes.py  data_consistency_checker.py  data_engine.py  data_engine_v2.py  data_fetcher.py  data_production_validation.py  (+43 more)
(+29 files in other folders)
